--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "http-proxy": "^1.18.1",
     "http-proxy-middleware": "^3.0.0",
     "method-override": "^3.0.0",
+    "mongoose": "^8.5.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
